# EXP-T

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WHATISNEW
examples/CH+_ih-imms/: CH+.exp  CH+.mol  TRA_CH+.out  ccsd.inp  ccsd.out  moltra.inp  moltra_CH+.out  run_example.sh
examples/CH_fs_ccsd_0h3p/: ccsd.inp  ccsd.out  moltra.inp  moltra_CH.out  run_example.sh
examples/CO_ccsd/: CO.mol  CO_ccsd_sym-C1.out  TRA.inp  TRA_CO.out  ccsd.inp  ccsd.out  moltra.inp  moltra_CO.out  run_example.sh
examples/C_atom_ih-imms/: C.exp  C.mol  TRA_C.out  ccsd.inp  ccsd.out  moltra.inp  moltra_C.out  run_example.sh
examples/C_atom_x2cmmf/: TRA.inp  TRA_C.out  ccsd.inp  ccsd_gaunt.out  ccsd_nogaunt.out
examples/HgH2+_shifts/: TRA.inp  TRA_hgh+.out  expt_HgH2+_Cinfv_imag.out  expt_HgH2+_Cinfv_real.out  expt_HgH2+_Cinfv_realimag.out  input-Cinfv
examples/HgH_density_matrix_0h1p/: ccsd.inp  ccsd_density_matrices.out  moltra_HgH.out  run_example.sh
examples/HgH_fs_ccsd/: HgH.exp  HgH.mol  ccsd.inp  ccsd.out  run_example.sh
examples/K_atom_hfs/: K.mol  ccsd.inp  ccsd.out  moltra.inp  moltra_K.out  run_example.sh
examples/N_atom_tdm_0h3p/: ccsd.inp  ccsd.out  ccsd_tdm.out  moltra.inp  moltra_N.out  run_example.sh
examples/O2_highspin/: O2_ccsd.out  TRA.inp  TRA_O2.out  ccsd.out  input  moltra_O2.out  run_example.sh
examples/Pb_fs_ccsd/: Pb.exp  Pb.mol  Pb_ccsd_SB.out  TRA_Pb.out  ccsd.inp  ccsd.out  input  moltra.inp  moltra_Pb.out  run_example.sh
examples/Rb_atom_TDMs/: HEFF1  HEFF2  Rb.mol  Rb_Cinfv_F+.out  Rb_Cinfv_F-.out  SCF.inp  SCF_Rb.out  TRA+.inp  TRA+_Rb.out  TRA-.inp  TRA-_Rb.out  ccsd_F+.out  heff.out  input-Cinfv_F+  input-Cinfv_F-  input_F-
examples/Rb_atom_TDMs_direct/: Rb.mol  TRA_Rb.out  ccsd.inp  ccsd.out  run_calculation.sh  tdm.inp  tdm.out  tdm_linear.inp  tdm_linear.out
examples/Rb_atom_TDMs_finite_field/: HEFF1  HEFF2  Rb.exp  Rb.mol  TRA_Rb.out  ccsd.out  ccsd_F+.inp  ccsd_F+.out  ccsd_F-.out  ff.inp  ff.out  ff_tdm.out  moltra.inp  moltra_Rb.out  run_example.sh
examples/Rb_atom_TDMs_finite_order/: Rb.exp  Rb.mol  ccsd.out  moltra.inp  moltra_Rb.out  run_example.sh  spectrum_analysis.out  tdm.inp  tdm.out  tdm_linear.inp  tdm_linear.out
examples/Xe2+_tdm_1h0p/: Xe2.exp  Xe2.mol  ccsd.inp  ccsd.out  ccsd_tdm.out  moltra_Xe2.out  run_example.sh
include/: cblas-decl.h  codata.h  comdef.h  cuda_code.h  datamodel.h  diis.h  engine.h  error.h  heff.h  interfaces.h  intham.h  intham1.h  io.h  linalg.h  memory.h  methods.h  options.h  platform.h  reference.h  selection.h  sort.h  spinors.h  symmetry.h  timer.h  utils.h
openblas/: .directory  CMakeLists.txt
scripts/: expt_spectrum.py
scripts/wick/: README.md
src/: .directory  error.c  main.c  memory.c  options.c  platform.c  reference.c  sort.c  spinors.c  symmetry.c  timer.c  utils.c
src/cuda/: cuda_device_query.c  mulblocks_cuda.c  reorder_cuda.cu
src/datamodel/: block.c  dgstack.c  diagram.c
src/diatomic/: blas_lapack.h  cubic_spline.c  cubic_spline.h  errquit.c  errquit.h  finite_diff.c  finite_diff.h  harmonic.c  harmonic.h  input_data.c  input_data.h  main.c  mapping.c  mapping.h  matrix_element.c  matrix_element.h  morse.c  morse.h  numerov.c  numerov.h  read_input.c  read_input.h  solver.c  solver.h  tranmom.c  tranmom.h  units.h  utils.c  utils.h  write_psi.c  write_psi.h
src/engine/: add.c  basic.c  closed.c  compress_triples.c  compress_triples_template.c  diveps.c  info_queries.c  intham1.c  intruders.c  max.c  mult.c  perm.c  relaxation_devel.c  reorder.c  reorder_block.c  restrict_devel.c  scapro.c  selection.c  templates.h
src/expt2pam/: .directory  basis.c  basis.h  ecp.c  ecp.h  elements.c  elements.h  error.c  error.h  expt_format.l  expt_lexer.h  expt_parse.c  gen_cfour.c  gen_oneprop.c  gen_pam.c  gen_turbomole.c  geodesic.c  main.c  molecule.c  molecule.h  zmatrix.c  zmatrix.h
src/expt2pam_devel/: basis.c  basis.h  ecp.c  elements.c  elements.h  error.c  expt_format.l  expt_lexer.h  expt_parse.c  gen_cfour.c  gen_pam.c  geodesic.h  lex.yy.c  main.c  molecule.h
src/heff/: denmat.c  dipole.c  heff.c  heff_0h3p.c  heff_devel.c  hefff.c  intham.c  model_space.c  model_space.h  msprop.c  mvcoef.c  mvcoef.h  natorb.c  natorb.h  renorm_omega.c  renorm_omega.h  slater.c  slater.h  slater_det.c  slater_det.h  slater_rules.c  slater_rules.h
src/heffman/: Makefile  heff.f  heff.f90  hefflib.f  hefflib.f90  nombres_mod.f90  puma.f  puma.f90  readheff.f  readheff.f90  readme
src/interfaces/: dirac_binary.f90  dirac_interface.c  tm2c_interface_devel.c
src/io/: io.c
src/linalg/: conj.c  eig.c  identity.c  inv.c  ixadiffmax.c  ixamax.c  loeworth.c  overlap.c  projector.c  svd.c  xabs.c  xaxpy.c  xdot.c  xgemm.c  xmatcopy.c  xprimat.c  xzeros.c
src/methods/: ccutils.c  ccutils.h  diis.c  sector00.c  sector00_ccsdt.c  sector00_devel.c  sector01.c  sector01_ccsdt.c  sector01_devel.c  sector02.c  sector02_ccsdt.c  sector02_devel.c  sector03_ccsdt.c  sector03_devel.c  sector10.c  sector10_ccsdt.c  sector10_devel.c  sector11.c  sector11_ccsdt.c  sector12_devel.c  sector20.c  t3corr_ccsdt.c  t3corr_devel.c
src/mknatorb/: dfpcmo.f90  mknatorb.f90
src/mknatorb_devel/: mknatorb.f90
src/rcc/: error.c  main.c  memory.c  options.c  parse_argv.c  parse_argv.h  platform.c  spinors.c  symmetry.c  timer.c  utils.c  version.h
src/read_dfcoef/: read_dfcoef.f90
src/read_mdprop/: main.c  mdprop.c  mdprop.h  mrconee.c  mrconee.h  read_mdprop.f90  unformatted.c  unformatted.h
src/readinp/: directive_intham1.c  expt.l  lex.yy.c  lexer.h  readinp.c
src/sorting/: sort_1e.c  sort_2e.c  sort_driver.c  sorting_request.c  sorting_request.h
src/transform_natorb/: errquit.c  errquit.h  main.c  mapping.c  mapping.h  print_vectors.c  print_vectors.h  read_dirac_output.c  read_dirac_output.h  read_natural_spinors.c  read_natural_spinors.h  transform.c  transform.h
test/: .directory  minitest.py  test.py
test/ccsd/: test.py
test/ccsd(t)/: TRA.inp  input  input-2  test.py
test/ccsd_highspin/: O2.mol  ccsd.inp  test.py
test/ccsd_lambda/: NO-C1.mol  NO-C2.mol  NO-C2v.mol  NO.exp  (+2 more)
(+1197 files in other folders)
